<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">e-menu</string>
    <string name="menu_settings">Settings</string>
    <string name="mainMenu">主選單</string>
    <string name="preselectedMeals">預選餐點</string>
    <string name="schedule">時刻表</string>
    <string name="flightDynamics">航班動態</string>
    <string name="boarding">預測登機</string>
    <string name="management">行程管理</string>
    <string name="more">更多服務</string>
    <string name="back">返回</string>
    <string name="confirm">確認</string>
    <string name="dinner">dinner</string>
    <string name="input_booking">輸入訂位代號</string>
    <string name="booking_number">訂位代號</string>
    <string name="last_name">姓(英文)</string>
    <string name="name">名(英文)</string>
    <string name="input_prompt">字母間請勿加空白或特殊符號</string>
    <string name="select_order_flight">選擇訂餐飛機</string>
    <string name="flight_number">航班編號</string>
    <string name="departure_date">出發日期</string>
    <string name="stroke">行程</string>
    <string name="cancle">取消</string>
    <string name="next">下一步</string>
    <string name="cancleDinner">取消訂餐</string>
    <string name="orderingDetails">訂餐明細</string>
    <string name="resetDinner">重新選擇</string>
    <string name="timeout">在起飛前24小時之內已不可取消或修改餐點</string>
    <string name="queryLocation">以起訖地點查詢</string>
    <string name="queryFlight">以航班編號查詢</string>
    <string name="selectPlaceOfDeparture">選擇出發地點</string>
    <string name="selectDestination">選擇目的地</string>
    <string name="departureDate">出發日期</string>
    <string name="query">開始查詢</string>
    <string name="defaultYear">2012</string>
    <string name="defaultDay">星期四</string>
    <string name="defaultDate">11/22</string>
    <string name="inputFlightNumber">請輸入航班編號</string>
    <string name="browseMenu">瀏覽菜單</string>
    <string name="flightNumber">航班編號</string>
    <string name="meals">餐點</string>

</resources>