<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg"
    tools:context=".MainActivity" >

    <!-- 頁首 -->

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_u_01" >

        <Button
            android:id="@+id/btn_mainMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5sp"
            android:background="@drawable/btn_mainmenu"
            android:gravity="center"
            android:onClick="back"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/preselectedMeals"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </RelativeLayout>

    <!-- 輸入代號 -->

    <RelativeLayout
        android:id="@+id/layout_input_booking"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1"
        android:background="@drawable/dinner_top_s" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/select_order_flight"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <!-- 輸入 -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_input_booking"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/tv_flight_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="35sp"
            android:layout_marginTop="20sp"
            android:text="@string/flight_number"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_departure_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_flight_number"
            android:layout_alignBottom="@+id/tv_flight_number"
            android:layout_toLeftOf="@+id/tv_flight_number"
            android:text="@string/departure_date"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_stroke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_flight_number"
            android:layout_alignBottom="@+id/tv_flight_number"
            android:layout_toRightOf="@+id/tv_flight_number"
            android:text="@string/stroke"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_flight_number"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5sp"
            android:src="@drawable/blue_line" />

        <ListView
            android:id="@+id/list_flight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <!-- 頁尾 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/under_bar"
        android:baselineAligned="true"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/schedule"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3sp"
                android:clickable="true"
                android:contentDescription="@string/schedule"
                android:scaleType="center"
                android:src="@drawable/btn_under_05" />

            <TextView
                android:id="@+id/tv_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/schedule"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/flightDynamics"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_flightDynamics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3sp"
                android:clickable="true"
                android:contentDescription="@string/flightDynamics"
                android:scaleType="center"
                android:src="@drawable/btn_under_04" />

            <TextView
                android:id="@+id/tv_flightDynamics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/flightDynamics"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/boarding"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_boarding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3sp"
                android:clickable="true"
                android:contentDescription="@string/boarding"
                android:scaleType="center"
                android:src="@drawable/btn_under_03" />

            <TextView
                android:id="@+id/tv_boarding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/boarding"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/management"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_management"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3sp"
                android:clickable="true"
                android:contentDescription="@string/management"
                android:scaleType="center"
                android:src="@drawable/btn_under_02" />

            <TextView
                android:id="@+id/tv_management"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/management"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/more"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3sp"
                android:clickable="true"
                android:contentDescription="@string/more"
                android:scaleType="center"
                android:src="@drawable/btn_under_01" />

            <TextView
                android:id="@+id/tv_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/more"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>