<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".browseMainAcivity" >

    <!-- 頁首 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_u_01" >

            <Button
                android:id="@+id/btn_mainMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5sp"
                android:background="@drawable/btn_mainmenu"
                android:gravity="center"
                android:onClick="back"
                android:text="@string/back"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/titleBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/preselectedMeals"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/plan4"
            android:text="@string/queryLocation"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_flight"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/plan5"
            android:text="@string/queryFlight"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="10"
            android:orientation="vertical" >

            <!-- 選擇出發地點 -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:background="@drawable/plan_ba1"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="20sp"
                    android:layout_weight="1"
                    android:src="@drawable/plan_up" />

                <TextView
                    android:id="@+id/tv_selectPlaceOfDeparture"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:text="@string/selectPlaceOfDeparture"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- 選擇目的地 -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:background="@drawable/plan_ba1"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="20sp"
                    android:layout_weight="1"
                    android:src="@drawable/plan_down" />

                <TextView
                    android:id="@+id/tv_selectDestination"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:text="@string/selectDestination"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- 選擇出發日期 -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:background="@drawable/plan_ba1"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="40sp"
                    android:src="@drawable/plan3" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_departureDate"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/departureDate"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:orientation="horizontal" >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_gravity="center"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/tv_year"
                                android:layout_width="fill_parent"
                                android:layout_height="0dp"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:text="@string/defaultYear"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tv_day"
                                android:layout_width="fill_parent"
                                android:layout_height="0dp"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:text="@string/defaultDay"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/tv_date"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/defaultDate"
                            android:textSize="26sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!-- 開始查詢 -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/movetime_btn"
                    android:text="@string/query"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>
    <!-- 頁尾 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/under_bar"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/schedule"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="3sp"
                    android:clickable="true"
                    android:contentDescription="@string/schedule"
                    android:scaleType="center"
                    android:src="@drawable/btn_under_05" />

                <TextView
                    android:id="@+id/tv_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/schedule"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/flightDynamics"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_flightDynamics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="3sp"
                    android:clickable="true"
                    android:contentDescription="@string/flightDynamics"
                    android:scaleType="center"
                    android:src="@drawable/btn_under_04" />

                <TextView
                    android:id="@+id/tv_flightDynamics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/flightDynamics"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/boarding"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_boarding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="3sp"
                    android:clickable="true"
                    android:contentDescription="@string/boarding"
                    android:scaleType="center"
                    android:src="@drawable/btn_under_03" />

                <TextView
                    android:id="@+id/tv_boarding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/boarding"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/management"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_management"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="3sp"
                    android:clickable="true"
                    android:contentDescription="@string/management"
                    android:scaleType="center"
                    android:src="@drawable/btn_under_02" />

                <TextView
                    android:id="@+id/tv_management"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/management"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/more"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="3sp"
                    android:clickable="true"
                    android:contentDescription="@string/more"
                    android:scaleType="center"
                    android:src="@drawable/btn_under_01" />

                <TextView
                    android:id="@+id/tv_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/more"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>